Changes for 3.2.7rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.2.6

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), Korean, Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.2.6rc1

Bug fixes:
A.F....... [ZBX-10253] fixed translation string and validation of TLS settings in host.create(), host.update() and host.massUpdate() methods; added variables to hosts array required by CHost::validateUpdate() method (miks)
........S. [ZBX-12121] fixed problem generation by timer process (gleb)
..F....... [ZBX-11536] fixed missing operator in event correlation form (miks)
..F....... [ZBX-11309] fixed collision of cookies name responsible for storing selected checkboxes (miks)
..F....... [ZBX-11981] fixed undefined index 'ns' in options output array (miks)
..F....... [ZBX-12116] fixed pagination in Maintenance page (Sasha)
A......... [ZBX-12108] fixed limit option in event.get method (Sasha)
........S. [ZBX-12100] fixed new line handling in SSH agent with numeric type of information (vso)
..F....... [ZBX-9958] fixed wrongly displayed list view after mass update failure (miks)

--------------------------------------------------------------------------------
Changes for 3.2.5

3.2.5rc1 was released as 3.2.5 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.5rc1

Bug fixes:
........S. [ZBX-12075] fixed security vulnerability with execution of the remote commands on server; thanks to Lilith Wyatt, Cisco Systems (gleb)
........S. [ZBX-12076] fixed security vulnerability with execution of the remote commands on proxy; thanks to Lilith Wyatt, Cisco Systems (gleb)
..F....... [ZBX-11024] fixed popup window size in actions configuration form (miks)